# AI-PROJECT

./: README.md  app.py  main.py  pyproject.toml  requirment.txt  setup.py  streamlit_app.py
agent/: agentic_workflow.py
config/: config.yaml
notebook/: experiments.ipynb
prompt_library/: prompt.py
test/: test_mssql_connection.py
tools/: arthmatic_op_tool.py  currency_converstion_tool.py  document_reader_tool.py  mongo_tool.py  mssql_tool.py  outlook_tool.py  place_search_tool.py  weather_info_tool.py
utils/: calculator.py  db_connections.py  document_reader.py  model_loader.py  outlook_utils.py  place_info_search.py  rag.py  save_to_document.py  vectorstore_loader.py
vectorstore/: doc_hash.txt  index.faiss  index.pkl
